[NittuFlashcards]-Adding icons and other assets

--- a/app.json
+++ b/app.json
@@ -13,13 +13,20 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "android": {
       "package": "com.nittu.babyflashcards",
       "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
+      }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "a0879adc-843b-4d53-878c-70462d9bd98e"
       }
     }
   }
