--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
       "package": "com.nittu.babyflashcards",
       "versionCode": 1,
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#ffffff"
       }
     },
